--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 </body>
 
 </html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
-  $(docucment).ready(function () {
+  $(document).ready(function () {
 
     alert("world!!!");
 
