--- a/index.html
+++ b/index.html
@@ -1,40 +1,29 @@
 <!DOCTYPE HTML>
-<html lang="en">
-
+<html lang = "en">
 <head>
   <!-- basic.html -->
-  <title>Things - A Simple List</title>
-  <link rel="stylesheet" href="styles.css">
+   <title>Things - A Simple List</title>
+   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
   <section class="bodysect">
-    <h1>Simple List</h1>
-
-
-    <!-- Here will be the main input where users add to list -->
-    <div class="header">
-      <input id="listfield" type="text" value="Add list item"></input>
-      <input id="submitbtn" type="submit" value="submit"><a href="#"></a></input>
-
-    </div>
-
-
-    <!-- This is the section where the list is displayed -->
-    <div id="listdisp"></div>
-
-
-
-
-  </section>
+  <h1>Simple List</h1>
+  
+ 
+  <!-- Here will be the main input where users add to list -->
+  <div class="header">
+	<input id="listfield" type="text" value="Add list item"></input>
+	<input id="submitbtn" type="submit" value="+"><a href="#"></a></input>
+  
+  </div>
+  
+  
+  <!-- This is the section where the list is displayed -->
+  <div id="listdisp"></div>
+  
+  
+  
+  
+ </section>
 </body>
-
 </html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js"></script>
-<script type="text/javascript">
-  $(docucment).ready(function () {
-
-    alert("world!!!");
-
-  });
-</script>
