Styled the list

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
     <!-- Here will be the main input where users add to list -->
     <div class="header">
       <input id="listfield" type="text" value="" placeholder="Add list item"></input>
-      <input id="submitbtn" type="submit" value="submit"><a href="#"></a></input>
+      <input id="submitbtn" type="submit" value="+"><a href="#"></a></input>
 
     </div>
 
 
     <!-- This is the section where the list is displayed -->
-    <div id="listdisp"></div>
+    <div class="overlayt">
+      
+       <div id="listdisp"></div>
+  
+    </div>
 
 
 
