--- a/index.html
+++ b/index.html
@@ -72,8 +72,19 @@
       ShoppingListContainer.html("");
       for(var i=0; i<shoppingList.length; i++)
       {
-        ShoppingListContainer.append("<div class='shoppingItems' style='color:white; font-size:24px; border-bottom:1px solid black; background-color:#26265f;padding:10px;font-weight:bold; text-align:center;  width:100%;'>"+shoppingList[i]+"<div style='display:inline;'><button style='color:red;float:right; padding: 4px;    background: #22222b;    border: none;    border-radius: 10px; font-size:24px; font-weight:blod;'class='removeme'data-shoppingListIndex='"+i+"'>Remove</button></div></div>");
+        ShoppingListContainer.append(
+        "<div class='shoppingItems' >"+
+          "<div class='ItemNameBlock'>"
+            +shoppingList[i]+
+          "</dv>"+
+          "<div class='itemMenuBlock'>"+
+            "<button class='removeme'data-shoppingListIndex='"+i+"'>"+
+              "Remove"+
+            "</button>"+
+          "</div>"+
+        "</div>");
       }
+
       $("#listfield").val("");//empty the input for the next item 
       $(".removeme").click(function()
         {
@@ -81,8 +92,7 @@
           removeItemFromShoppingList (removeItemAt);
         });
     }
-
-      //remove item from shopping list array 
+//remove item from shopping list array 
 function removeItemFromShoppingList (index)
 {
   shoppingList.splice(index,1);
