--- a/index.html
+++ b/index.html
@@ -38,9 +38,24 @@
 <script type="text/javascript">
   $(document).ready(function () {
 
+    // create json obj easy 
+//http://www.objgen.com/json/models/DxwO
+
+//Paste the json here to host it 
+//http://myjson.com/1fx88w
+
+
+
+var shoppingList = [];
+$.getJSON("https://api.myjson.com/bins/ab128",function(data){
+  shoppingList = data.ShoppingList;
+  diplayNewItems();
+});
+
+
     var newItem ="";
     //create shopping array list
-    var shoppingList = [];
+    
 
     // shoppingList.push("Milk");
     // shoppingList.push("Eggs");
