Made CSS changes and JS

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ function removeItemFromShoppingList (index)
 
 let lftDisp = $('#sidelist');
 
-for (i=0; i < lftDisp.length; i++) {
-  lftDisp.append("item 1" + "<br>");
+for (i=0; i < 10; i++) {
+  lftDisp.append("Item List" + " " + "<br>" );
 
 }
 
