--- a/index.html
+++ b/index.html
@@ -104,12 +104,27 @@ function removeItemFromShoppingList (index)
   diplayNewItems();  
 }
 
+// Appends list to side section
 let lftDisp = $('#sidelist');
+var itemBrowser = ["Apple", "Banana", "Pears"];
 
-for (i=0; i < 10; i++) {
-  lftDisp.append("Item List" + " " + "<br>" );
+// Get list from ONLINE or Database
+$.getJSON("https://api.myjson.com/bins/ab128",function(onlineData){
+  var tempList = onlineData.ShoppingList;
+  for(var position = 0; position < tempList.length; position++) {
+  itemBrowser.push(tempList[position]);
+  }
+
+  // Physically add the items from above into the sife bar
+ for(var position = 0; position < itemBrowser.length; position++) {
+  lftDisp.append("<div class='leftliststyle'>" + itemBrowser[position] + "</div>" + "<button> + </button>");
 
 }
+}); 
+
+
+
+
 
 
   });
