--- a/index.html
+++ b/index.html
@@ -27,8 +27,18 @@
    
   </section>
 
-    <!-- This is the section where the archived list is displayed -->
+    <!-- This is the section where the archived list is displayed on the left side -->
 <section class="bodysect2">
+    <div class="searchbr">
+        <input type="search">
+
+        </input>
+
+        <button type="button"> Search </button>
+  
+     </div>
+
+
     <div id="sidelist">
   
    </div>
